src/semantic.output
Grammar

    0 $accept: begin $end

    1 begin: program

    2 program: program declaration
    3        | %empty

    4 declaration: varDecl
    5            | funcDecl

    6 varDecl: TYPE varList ';'
    7        | TYPE error ';'

    8 varList: varList ',' new_id
    9        | new_id

   10 new_id: ID

   11 funcDecl: TYPE new_id '(' arguments ')' '{' funcBody '}'
   12         | TYPE new_id '(' error ')' '{'

   13 arguments: %empty
   14          | argsList

   15 argsList: argsList ',' arg
   16         | arg

   17 arg: TYPE ID

   18 funcBody: %empty
   19         | funcBody varDecl
   20         | funcBody funcDecl
   21         | funcBody stmt

   22 stmt: exprStmt
   23     | returnStmt
   24     | iterStmt
   25     | condStmt

   26 iterStmt: FOR '(' exprStmt exprStmt ')' body
   27         | FOR '(' exprStmt exprStmt expression ')' body
   28         | FORALL '(' pertExpr ')' body
   29         | FORALL '(' error ')'
   30         | FOR '(' error ')'

   31 body: '{' funcBody '}'
   32     | stmt
   33     | varDecl
   34     | funcDecl

   35 condStmt: IF '(' expression ')' body
   36         | IF '(' expression ')' body ELSE body

   37 returnStmt: RETURN exprStmt

   38 exprStmt: expression ';'
   39         | ';'
   40         | error ';'

   41 expression: assign
   42           | inExpr
   43           | outExpr
   44           | simpleExpr
   45           | setExpr

   46 assign: var '=' simpleExpr

   47 var: ID

   48 inExpr: READ '(' var ')'

   49 outExpr: WRITE '(' output ')'
   50        | WRITELN '(' output ')'

   51 output: ID
   52       | CHAR
   53       | STRING

   54 simpleExpr: simpleExpr DISJ disjExpr
   55           | disjExpr

   56 disjExpr: disjExpr CONJ negExpr
   57         | negExpr

   58 negExpr: NEG negExpr
   59        | relExpr

   60 relExpr: relExpr RELOP artExpr1
   61        | artExpr1

   62 artExpr1: artExpr1 ARTOP1 artExpr2
   63         | artExpr2

   64 artExpr2: artExpr2 ARTOP2 factor
   65         | factor

   66 factor: ID
   67       | '(' simpleExpr ')'
   68       | constant
   69       | call
   70       | IS_SET '(' var ')'
   71       | pertExpr

   72 constant: INTEGER
   73         | FLOAT
   74         | EMPTY

   75 call: var '(' params ')'

   76 params: %empty
   77       | paramList

   78 paramList: paramList ',' simpleExpr
   79          | simpleExpr

   80 pertExpr: elem IN set

   81 setExpr: SETOP '(' pertExpr ')'
   82        | EXISTS '(' pertExpr ')'

   83 elem: ID
   84     | '(' setExpr ')'
   85     | call
   86     | '(' simpleExpr ')'
   87     | constant

   88 set: ID
   89    | SETOP '(' pertExpr ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 12 26 27 28 29 30 35 36 48 49 50 67 70 75 81 82 84 86 89
    ')' (41) 11 12 26 27 28 29 30 35 36 48 49 50 67 70 75 81 82 84 86 89
    ',' (44) 8 15 78
    ';' (59) 6 7 38 39 40
    '=' (61) 46
    '{' (123) 11 12 31
    '}' (125) 11 31
    error (256) 7 12 29 30 40
    TYPE <ival> (258) 6 7 11 12 17
    RELOP <ival> (259) 60
    SETOP <ival> (260) 81 89
    ARTOP1 <ival> (261) 62
    ARTOP2 <ival> (262) 64
    ID <sval> (263) 10 17 47 51 66 83 88
    IF (264) 35 36
    ELSE (265) 36
    FOR (266) 26 27 30
    RETURN (267) 37
    FORALL (268) 28 29
    IN (269) 80
    IS_SET (270) 70
    EXISTS (271) 82
    DISJ (272) 54
    CONJ (273) 56
    NEG (274) 58
    READ (275) 48
    WRITE (276) 49
    WRITELN (277) 50
    INTEGER <ival> (278) 72
    FLOAT <fval> (279) 73
    CHAR <cval> (280) 52
    STRING <sval> (281) 53
    EMPTY (282) 74
    THEN (283)


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    begin (37)
        on left: 1
        on right: 0
    program <tnode> (38)
        on left: 2 3
        on right: 1 2
    declaration <tnode> (39)
        on left: 4 5
        on right: 2
    varDecl <tnode> (40)
        on left: 6 7
        on right: 4 19 33
    varList <tnode> (41)
        on left: 8 9
        on right: 6 8
    new_id <tnode> (42)
        on left: 10
        on right: 8 9 11 12
    funcDecl <tnode> (43)
        on left: 11 12
        on right: 5 20 34
    arguments <tnode> (44)
        on left: 13 14
        on right: 11
    argsList <tnode> (45)
        on left: 15 16
        on right: 14 15
    arg <tnode> (46)
        on left: 17
        on right: 15 16
    funcBody <tnode> (47)
        on left: 18 19 20 21
        on right: 11 19 20 21 31
    stmt <tnode> (48)
        on left: 22 23 24 25
        on right: 21 32
    iterStmt <tnode> (49)
        on left: 26 27 28 29 30
        on right: 24
    body <tnode> (50)
        on left: 31 32 33 34
        on right: 26 27 28 35 36
    condStmt <tnode> (51)
        on left: 35 36
        on right: 25
    returnStmt <tnode> (52)
        on left: 37
        on right: 23
    exprStmt <tnode> (53)
        on left: 38 39 40
        on right: 22 26 27 37
    expression <tnode> (54)
        on left: 41 42 43 44 45
        on right: 27 35 36 38
    assign <tnode> (55)
        on left: 46
        on right: 41
    var <tnode> (56)
        on left: 47
        on right: 46 48 70 75
    inExpr <tnode> (57)
        on left: 48
        on right: 42
    outExpr <tnode> (58)
        on left: 49 50
        on right: 43
    output <tnode> (59)
        on left: 51 52 53
        on right: 49 50
    simpleExpr <tnode> (60)
        on left: 54 55
        on right: 44 46 54 67 78 79 86
    disjExpr <tnode> (61)
        on left: 56 57
        on right: 54 55 56
    negExpr <tnode> (62)
        on left: 58 59
        on right: 56 57 58
    relExpr <tnode> (63)
        on left: 60 61
        on right: 59 60
    artExpr1 <tnode> (64)
        on left: 62 63
        on right: 60 61 62
    artExpr2 <tnode> (65)
        on left: 64 65
        on right: 62 63 64
    factor <tnode> (66)
        on left: 66 67 68 69 70 71
        on right: 64 65
    constant <tnode> (67)
        on left: 72 73 74
        on right: 68 87
    call <tnode> (68)
        on left: 75
        on right: 69 85
    params <tnode> (69)
        on left: 76 77
        on right: 75
    paramList <tnode> (70)
        on left: 78 79
        on right: 77 78
    pertExpr <tnode> (71)
        on left: 80
        on right: 28 71 81 82 89
    setExpr <tnode> (72)
        on left: 81 82
        on right: 45 84
    elem <tnode> (73)
        on left: 83 84 85 86 87
        on right: 80
    set <tnode> (74)
        on left: 88 89
        on right: 80


State 0

    0 $accept: . begin $end

    $end  reduce using rule 3 (program)
    TYPE  reduce using rule 3 (program)

    begin    go to state 1
    program  go to state 2


State 1

    0 $accept: begin . $end

    $end  shift, and go to state 3


State 2

    1 begin: program .
    2 program: program . declaration

    TYPE  shift, and go to state 4

    $end  reduce using rule 1 (begin)

    declaration  go to state 5
    varDecl      go to state 6
    funcDecl     go to state 7


State 3

    0 $accept: begin $end .

    $default  accept


State 4

    6 varDecl: TYPE . varList ';'
    7        | TYPE . error ';'
   11 funcDecl: TYPE . new_id '(' arguments ')' '{' funcBody '}'
   12         | TYPE . new_id '(' error ')' '{'

    error  shift, and go to state 8
    ID     shift, and go to state 9

    varList  go to state 10
    new_id   go to state 11


State 5

    2 program: program declaration .

    $end  reduce using rule 2 (program)
    TYPE  reduce using rule 2 (program)


State 6

    4 declaration: varDecl .

    $end  reduce using rule 4 (declaration)
    TYPE  reduce using rule 4 (declaration)


State 7

    5 declaration: funcDecl .

    $end  reduce using rule 5 (declaration)
    TYPE  reduce using rule 5 (declaration)


State 8

    7 varDecl: TYPE error . ';'

    ';'  shift, and go to state 12


State 9

   10 new_id: ID .

    ';'  reduce using rule 10 (new_id)
    ','  reduce using rule 10 (new_id)
    '('  reduce using rule 10 (new_id)


State 10

    6 varDecl: TYPE varList . ';'
    8 varList: varList . ',' new_id

    ';'  shift, and go to state 13
    ','  shift, and go to state 14


State 11

    9 varList: new_id .
   11 funcDecl: TYPE new_id . '(' arguments ')' '{' funcBody '}'
   12         | TYPE new_id . '(' error ')' '{'

    '('  shift, and go to state 15

    ';'  reduce using rule 9 (varList)
    ','  reduce using rule 9 (varList)


State 12

    7 varDecl: TYPE error ';' .

    $end  reduce using rule 7 (varDecl)
    TYPE  reduce using rule 7 (varDecl)


State 13

    6 varDecl: TYPE varList ';' .

    $end  reduce using rule 6 (varDecl)
    TYPE  reduce using rule 6 (varDecl)


State 14

    8 varList: varList ',' . new_id

    ID  shift, and go to state 164

    new_id  go to state 16


State 15

   11 funcDecl: TYPE new_id '(' . arguments ')' '{' funcBody '}'
   12         | TYPE new_id '(' . error ')' '{'

    error  shift, and go to state 17
    TYPE   shift, and go to state 18

    ')'  reduce using rule 13 (arguments)

    arguments  go to state 19
    argsList   go to state 20
    arg        go to state 21


State 16

    8 varList: varList ',' new_id .

    ';'  reduce using rule 8 (varList)
    ','  reduce using rule 8 (varList)


State 17

   12 funcDecl: TYPE new_id '(' error . ')' '{'

    ')'  shift, and go to state 22


State 18

   17 arg: TYPE . ID

    ID  shift, and go to state 23


State 19

   11 funcDecl: TYPE new_id '(' arguments . ')' '{' funcBody '}'

    ')'  shift, and go to state 24


State 20

   14 arguments: argsList .
   15 argsList: argsList . ',' arg

    ','  shift, and go to state 25

    ')'  reduce using rule 14 (arguments)


State 21

   16 argsList: arg .

    ','  reduce using rule 16 (argsList)
    ')'  reduce using rule 16 (argsList)


State 22

   12 funcDecl: TYPE new_id '(' error ')' . '{'

    '{'  shift, and go to state 26


State 23

   17 arg: TYPE ID .

    ','  reduce using rule 17 (arg)
    ')'  reduce using rule 17 (arg)


State 24

   11 funcDecl: TYPE new_id '(' arguments ')' . '{' funcBody '}'

    '{'  shift, and go to state 27


State 25

   15 argsList: argsList ',' . arg

    TYPE  shift, and go to state 18

    arg  go to state 28


State 26

   12 funcDecl: TYPE new_id '(' error ')' '{' .

    $end  reduce using rule 12 (funcDecl)
    TYPE  reduce using rule 12 (funcDecl)


State 27

   11 funcDecl: TYPE new_id '(' arguments ')' '{' . funcBody '}'

    error    reduce using rule 18 (funcBody)
    TYPE     reduce using rule 18 (funcBody)
    SETOP    reduce using rule 18 (funcBody)
    ID       reduce using rule 18 (funcBody)
    IF       reduce using rule 18 (funcBody)
    FOR      reduce using rule 18 (funcBody)
    RETURN   reduce using rule 18 (funcBody)
    FORALL   reduce using rule 18 (funcBody)
    IS_SET   reduce using rule 18 (funcBody)
    EXISTS   reduce using rule 18 (funcBody)
    NEG      reduce using rule 18 (funcBody)
    READ     reduce using rule 18 (funcBody)
    WRITE    reduce using rule 18 (funcBody)
    WRITELN  reduce using rule 18 (funcBody)
    INTEGER  reduce using rule 18 (funcBody)
    FLOAT    reduce using rule 18 (funcBody)
    EMPTY    reduce using rule 18 (funcBody)
    ';'      reduce using rule 18 (funcBody)
    '('      reduce using rule 18 (funcBody)
    '}'      reduce using rule 18 (funcBody)

    funcBody  go to state 29


State 28

   15 argsList: argsList ',' arg .

    ','  reduce using rule 15 (argsList)
    ')'  reduce using rule 15 (argsList)


State 29

   11 funcDecl: TYPE new_id '(' arguments ')' '{' funcBody . '}'
   19 funcBody: funcBody . varDecl
   20         | funcBody . funcDecl
   21         | funcBody . stmt

    error    shift, and go to state 30
    TYPE     shift, and go to state 165
    SETOP    shift, and go to state 31
    ID       shift, and go to state 32
    IF       shift, and go to state 33
    FOR      shift, and go to state 34
    RETURN   shift, and go to state 35
    FORALL   shift, and go to state 36
    IS_SET   shift, and go to state 37
    EXISTS   shift, and go to state 38
    NEG      shift, and go to state 39
    READ     shift, and go to state 40
    WRITE    shift, and go to state 41
    WRITELN  shift, and go to state 42
    INTEGER  shift, and go to state 43
    FLOAT    shift, and go to state 44
    EMPTY    shift, and go to state 45
    ';'      shift, and go to state 46
    '('      shift, and go to state 47
    '}'      shift, and go to state 48

    varDecl     go to state 49
    funcDecl    go to state 50
    stmt        go to state 51
    iterStmt    go to state 52
    condStmt    go to state 53
    returnStmt  go to state 54
    exprStmt    go to state 55
    expression  go to state 56
    assign      go to state 57
    var         go to state 58
    inExpr      go to state 59
    outExpr     go to state 60
    simpleExpr  go to state 61
    disjExpr    go to state 62
    negExpr     go to state 63
    relExpr     go to state 64
    artExpr1    go to state 65
    artExpr2    go to state 66
    factor      go to state 67
    constant    go to state 68
    call        go to state 69
    pertExpr    go to state 70
    setExpr     go to state 71
    elem        go to state 72


State 30

   40 exprStmt: error . ';'

    ';'  shift, and go to state 73


State 31

   81 setExpr: SETOP . '(' pertExpr ')'

    '('  shift, and go to state 74


State 32

   47 var: ID .
   66 factor: ID .
   83 elem: ID .

    RELOP   reduce using rule 66 (factor)
    ARTOP1  reduce using rule 66 (factor)
    ARTOP2  reduce using rule 66 (factor)
    IN      reduce using rule 83 (elem)
    DISJ    reduce using rule 66 (factor)
    CONJ    reduce using rule 66 (factor)
    ';'     reduce using rule 66 (factor)
    '('     reduce using rule 47 (var)
    '='     reduce using rule 47 (var)


State 33

   35 condStmt: IF . '(' expression ')' body
   36         | IF . '(' expression ')' body ELSE body

    '('  shift, and go to state 75


State 34

   26 iterStmt: FOR . '(' exprStmt exprStmt ')' body
   27         | FOR . '(' exprStmt exprStmt expression ')' body
   30         | FOR . '(' error ')'

    '('  shift, and go to state 76


State 35

   37 returnStmt: RETURN . exprStmt

    error    shift, and go to state 30
    SETOP    shift, and go to state 31
    ID       shift, and go to state 32
    IS_SET   shift, and go to state 37
    EXISTS   shift, and go to state 38
    NEG      shift, and go to state 39
    READ     shift, and go to state 40
    WRITE    shift, and go to state 41
    WRITELN  shift, and go to state 42
    INTEGER  shift, and go to state 43
    FLOAT    shift, and go to state 44
    EMPTY    shift, and go to state 45
    ';'      shift, and go to state 46
    '('      shift, and go to state 47

    exprStmt    go to state 77
    expression  go to state 56
    assign      go to state 57
    var         go to state 58
    inExpr      go to state 59
    outExpr     go to state 60
    simpleExpr  go to state 61
    disjExpr    go to state 62
    negExpr     go to state 63
    relExpr     go to state 64
    artExpr1    go to state 65
    artExpr2    go to state 66
    factor      go to state 67
    constant    go to state 68
    call        go to state 69
    pertExpr    go to state 70
    setExpr     go to state 71
    elem        go to state 72


State 36

   28 iterStmt: FORALL . '(' pertExpr ')' body
   29         | FORALL . '(' error ')'

    '('  shift, and go to state 78


State 37

   70 factor: IS_SET . '(' var ')'

    '('  shift, and go to state 79


State 38

   82 setExpr: EXISTS . '(' pertExpr ')'

    '('  shift, and go to state 80


State 39

   58 negExpr: NEG . negExpr

    ID       shift, and go to state 166
    IS_SET   shift, and go to state 37
    NEG      shift, and go to state 39
    INTEGER  shift, and go to state 43
    FLOAT    shift, and go to state 44
    EMPTY    shift, and go to state 45
    '('      shift, and go to state 47

    var       go to state 81
    negExpr   go to state 82
    relExpr   go to state 64
    artExpr1  go to state 65
    artExpr2  go to state 66
    factor    go to state 67
    constant  go to state 68
    call      go to state 69
    pertExpr  go to state 70
    elem      go to state 72


State 40

   48 inExpr: READ . '(' var ')'

    '('  shift, and go to state 83


State 41

   49 outExpr: WRITE . '(' output ')'

    '('  shift, and go to state 84


State 42

   50 outExpr: WRITELN . '(' output ')'

    '('  shift, and go to state 85


State 43

   72 constant: INTEGER .

    RELOP   reduce using rule 72 (constant)
    ARTOP1  reduce using rule 72 (constant)
    ARTOP2  reduce using rule 72 (constant)
    IN      reduce using rule 72 (constant)
    DISJ    reduce using rule 72 (constant)
    CONJ    reduce using rule 72 (constant)
    ';'     reduce using rule 72 (constant)


State 44

   73 constant: FLOAT .

    RELOP   reduce using rule 73 (constant)
    ARTOP1  reduce using rule 73 (constant)
    ARTOP2  reduce using rule 73 (constant)
    IN      reduce using rule 73 (constant)
    DISJ    reduce using rule 73 (constant)
    CONJ    reduce using rule 73 (constant)
    ';'     reduce using rule 73 (constant)


State 45

   74 constant: EMPTY .

    RELOP   reduce using rule 74 (constant)
    ARTOP1  reduce using rule 74 (constant)
    ARTOP2  reduce using rule 74 (constant)
    IN      reduce using rule 74 (constant)
    DISJ    reduce using rule 74 (constant)
    CONJ    reduce using rule 74 (constant)
    ';'     reduce using rule 74 (constant)


State 46

   39 exprStmt: ';' .

    error    reduce using rule 39 (exprStmt)
    TYPE     reduce using rule 39 (exprStmt)
    SETOP    reduce using rule 39 (exprStmt)
    ID       reduce using rule 39 (exprStmt)
    IF       reduce using rule 39 (exprStmt)
    FOR      reduce using rule 39 (exprStmt)
    RETURN   reduce using rule 39 (exprStmt)
    FORALL   reduce using rule 39 (exprStmt)
    IS_SET   reduce using rule 39 (exprStmt)
    EXISTS   reduce using rule 39 (exprStmt)
    NEG      reduce using rule 39 (exprStmt)
    READ     reduce using rule 39 (exprStmt)
    WRITE    reduce using rule 39 (exprStmt)
    WRITELN  reduce using rule 39 (exprStmt)
    INTEGER  reduce using rule 39 (exprStmt)
    FLOAT    reduce using rule 39 (exprStmt)
    EMPTY    reduce using rule 39 (exprStmt)
    ';'      reduce using rule 39 (exprStmt)
    '('      reduce using rule 39 (exprStmt)
    '}'      reduce using rule 39 (exprStmt)


State 47

   67 factor: '(' . simpleExpr ')'
   84 elem: '(' . setExpr ')'
   86     | '(' . simpleExpr ')'

    SETOP    shift, and go to state 167
    ID       shift, and go to state 168
    IS_SET   shift, and go to state 169
    EXISTS   shift, and go to state 170
    NEG      shift, and go to state 171
    INTEGER  shift, and go to state 172
    FLOAT    shift, and go to state 173
    EMPTY    shift, and go to state 174
    '('      shift, and go to state 175

    var         go to state 176
    simpleExpr  go to state 86
    disjExpr    go to state 177
    negExpr     go to state 178
    relExpr     go to state 179
    artExpr1    go to state 180
    artExpr2    go to state 181
    factor      go to state 182
    constant    go to state 183
    call        go to state 184
    pertExpr    go to state 185
    setExpr     go to state 87
    elem        go to state 186


State 48

   11 funcDecl: TYPE new_id '(' arguments ')' '{' funcBody '}' .

    $end  reduce using rule 11 (funcDecl)
    TYPE  reduce using rule 11 (funcDecl)


State 49

   19 funcBody: funcBody varDecl .

    error    reduce using rule 19 (funcBody)
    TYPE     reduce using rule 19 (funcBody)
    SETOP    reduce using rule 19 (funcBody)
    ID       reduce using rule 19 (funcBody)
    IF       reduce using rule 19 (funcBody)
    FOR      reduce using rule 19 (funcBody)
    RETURN   reduce using rule 19 (funcBody)
    FORALL   reduce using rule 19 (funcBody)
    IS_SET   reduce using rule 19 (funcBody)
    EXISTS   reduce using rule 19 (funcBody)
    NEG      reduce using rule 19 (funcBody)
    READ     reduce using rule 19 (funcBody)
    WRITE    reduce using rule 19 (funcBody)
    WRITELN  reduce using rule 19 (funcBody)
    INTEGER  reduce using rule 19 (funcBody)
    FLOAT    reduce using rule 19 (funcBody)
    EMPTY    reduce using rule 19 (funcBody)
    ';'      reduce using rule 19 (funcBody)
    '('      reduce using rule 19 (funcBody)
    '}'      reduce using rule 19 (funcBody)


State 50

   20 funcBody: funcBody funcDecl .

    error    reduce using rule 20 (funcBody)
    TYPE     reduce using rule 20 (funcBody)
    SETOP    reduce using rule 20 (funcBody)
    ID       reduce using rule 20 (funcBody)
    IF       reduce using rule 20 (funcBody)
    FOR      reduce using rule 20 (funcBody)
    RETURN   reduce using rule 20 (funcBody)
    FORALL   reduce using rule 20 (funcBody)
    IS_SET   reduce using rule 20 (funcBody)
    EXISTS   reduce using rule 20 (funcBody)
    NEG      reduce using rule 20 (funcBody)
    READ     reduce using rule 20 (funcBody)
    WRITE    reduce using rule 20 (funcBody)
    WRITELN  reduce using rule 20 (funcBody)
    INTEGER  reduce using rule 20 (funcBody)
    FLOAT    reduce using rule 20 (funcBody)
    EMPTY    reduce using rule 20 (funcBody)
    ';'      reduce using rule 20 (funcBody)
    '('      reduce using rule 20 (funcBody)
    '}'      reduce using rule 20 (funcBody)


State 51

   21 funcBody: funcBody stmt .

    error    reduce using rule 21 (funcBody)
    TYPE     reduce using rule 21 (funcBody)
    SETOP    reduce using rule 21 (funcBody)
    ID       reduce using rule 21 (funcBody)
    IF       reduce using rule 21 (funcBody)
    FOR      reduce using rule 21 (funcBody)
    RETURN   reduce using rule 21 (funcBody)
    FORALL   reduce using rule 21 (funcBody)
    IS_SET   reduce using rule 21 (funcBody)
    EXISTS   reduce using rule 21 (funcBody)
    NEG      reduce using rule 21 (funcBody)
    READ     reduce using rule 21 (funcBody)
    WRITE    reduce using rule 21 (funcBody)
    WRITELN  reduce using rule 21 (funcBody)
    INTEGER  reduce using rule 21 (funcBody)
    FLOAT    reduce using rule 21 (funcBody)
    EMPTY    reduce using rule 21 (funcBody)
    ';'      reduce using rule 21 (funcBody)
    '('      reduce using rule 21 (funcBody)
    '}'      reduce using rule 21 (funcBody)


State 52

   24 stmt: iterStmt .

    error    reduce using rule 24 (stmt)
    TYPE     reduce using rule 24 (stmt)
    SETOP    reduce using rule 24 (stmt)
    ID       reduce using rule 24 (stmt)
    IF       reduce using rule 24 (stmt)
    FOR      reduce using rule 24 (stmt)
    RETURN   reduce using rule 24 (stmt)
    FORALL   reduce using rule 24 (stmt)
    IS_SET   reduce using rule 24 (stmt)
    EXISTS   reduce using rule 24 (stmt)
    NEG      reduce using rule 24 (stmt)
    READ     reduce using rule 24 (stmt)
    WRITE    reduce using rule 24 (stmt)
    WRITELN  reduce using rule 24 (stmt)
    INTEGER  reduce using rule 24 (stmt)
    FLOAT    reduce using rule 24 (stmt)
    EMPTY    reduce using rule 24 (stmt)
    ';'      reduce using rule 24 (stmt)
    '('      reduce using rule 24 (stmt)
    '}'      reduce using rule 24 (stmt)


State 53

   25 stmt: condStmt .

    error    reduce using rule 25 (stmt)
    TYPE     reduce using rule 25 (stmt)
    SETOP    reduce using rule 25 (stmt)
    ID       reduce using rule 25 (stmt)
    IF       reduce using rule 25 (stmt)
    FOR      reduce using rule 25 (stmt)
    RETURN   reduce using rule 25 (stmt)
    FORALL   reduce using rule 25 (stmt)
    IS_SET   reduce using rule 25 (stmt)
    EXISTS   reduce using rule 25 (stmt)
    NEG      reduce using rule 25 (stmt)
    READ     reduce using rule 25 (stmt)
    WRITE    reduce using rule 25 (stmt)
    WRITELN  reduce using rule 25 (stmt)
    INTEGER  reduce using rule 25 (stmt)
    FLOAT    reduce using rule 25 (stmt)
    EMPTY    reduce using rule 25 (stmt)
    ';'      reduce using rule 25 (stmt)
    '('      reduce using rule 25 (stmt)
    '}'      reduce using rule 25 (stmt)


State 54

   23 stmt: returnStmt .
